# kestrel-feature-observability-fleet

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  swimlane.lanes.test.mjs
.github/workflows/: ci.yml  publish.yml
kestrel_feature_observability_fleet/: __init__.py  backplane.py  endpoints.py  feature.py  models.py  redaction.py  store.py
kestrel_feature_observability_fleet/migrations/: __init__.py
kestrel_feature_observability_fleet/migrations/versions/: 0001_create_observability_events.py
kestrel_feature_observability_fleet/static/: swimlane.js  swimlane.lanes.js
tests/: conftest.py  test_backplane.py  test_endpoints.py  test_feature.py  test_models.py  test_redaction.py  test_scaffold.py  test_store.py
